fixed some layout issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -106,7 +106,7 @@ ul {
   -webkit-backdrop-filter: blur(4px);
 
   .logo {
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: map-get($color, greenAccent);
     align-self: center;
     margin-left: 20px;
@@ -578,7 +578,7 @@ ul {
     align-self: flex-start;
   }
   @include xl {
-    font-size: 2.4rem;
+    font-size: 2.2rem;
     margin-left: 15%;
     align-self: flex-start;
   }
@@ -597,7 +597,7 @@ ul {
   }
 
   @include xl {
-    font-size: 5rem;
+    font-size: 4rem;
     margin-left: 0px;
     align-self: flex-start;
   }
@@ -681,7 +681,7 @@ ul {
   @include lg {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 0.2fr 0.8fr;
+    grid-template-rows: 0.1fr 0.9fr;
     grid-row-gap: 2rem;
     margin-bottom: 2rem;
     min-height: 800px;
@@ -701,19 +701,26 @@ ul {
   border-radius: 10px;
   overflow: hidden;
   justify-self: flex-end;
-  align-self: center;
+  align-self: flex-end;
   height: fit-content;
-  margin: 2rem 2rem;
-
+  margin-bottom: 2rem;
   img {
-    width: 350px;
-    height: 600px;
-    margin-bottom: -10px;
+    width: 300px;
+    height: 550px;
+
+    @include lg {
+      width: 350px;
+      height: 650px;
+    }
   }
 
   .gamer-img {
     width: 100%;
     height: 300px;
+
+    @include lg {
+      height: 50%;
+    }
   }
 
   @include lg {
